--- a/src/@core/scss/_default-layout.scss
+++ b/src/@core/scss/_default-layout.scss
@@ -1,8 +1,8 @@
 @use "@core/scss/placeholders";
-@use "@core/scss/variables";
+@use "@core/scss/variables" as core-vars;
 
 .layout-navbar {
-  @if variables.$navbar-high-emphasis-text {
+  @if core-vars.$navbar-high-emphasis-text {
     @extend %layout-navbar;
   }
 }
