添加插件快速访问功能，支持下拉手势触发

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -8,6 +8,11 @@ html.v-overlay-scroll-blocked {
   position: fixed;
 }
 
+/* 防止Chrome移动端下拉刷新干扰 */
+body {
+  overscroll-behavior: none;
+}
+
 @media (width <= 768px){
   html.v-overlay-scroll-blocked {
     position: relative;
