--- a/src/@core/scss/template/placeholders/_misc.scss
+++ b/src/@core/scss/template/placeholders/_misc.scss
@@ -1,6 +1,14 @@
 %blurry-bg {
     position: relative;
-    box-shadow: none;
+    background: rgba(var(--v-theme-background), 1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 4%), 0 1px 2px rgba(0, 0, 0, 2%);
+
+    @media (width > 768px) {
+      .v-theme--transparent & {
+        backdrop-filter: blur(5px);
+        background: rgba(var(--v-theme-background), 0.1);
+      }
+    }
 
 
     @media (width <= 768px) {
@@ -10,8 +18,7 @@
         position: absolute;
         z-index: -1;
         backdrop-filter: blur(24px);
-        block-size: calc(env(safe-area-inset-top, 0px) + var(--navbar-height) + 4.5rem);
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 4%), 0 1px 2px rgba(0, 0, 0, 2%);
+        block-size: calc(env(safe-area-inset-top, 0px) + var(--navbar-tab-height) + 4rem);
         content: "";
         inset-block-start: 0;
         inset-inline: 0;
