--- a/src/@core/scss/template/placeholders/_misc.scss
+++ b/src/@core/scss/template/placeholders/_misc.scss
@@ -2,15 +2,17 @@
     position: relative;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 4%), 0 1px 2px rgba(0, 0, 0, 2%);
 
-    @media (width > 768px) {
+    @media (width >= 1280px) {
+      background: rgba(var(--v-theme-background), 1);
+
       .v-theme--transparent & {
         backdrop-filter: blur(5px);
-        background: rgba(var(--v-theme-background), 0.1);
+        background: rgba(var(--v-theme-background), 0.1) !important;
       }
     }
 
 
-    @media (width <= 768px) {
+    @media (width < 1280px) {
       background: transparent;
 
       &::before {
