--- a/src/@core/scss/template/_default-layout-w-vertical-nav.scss
+++ b/src/@core/scss/template/_default-layout-w-vertical-nav.scss
@@ -46,7 +46,8 @@ $header: ".layout-navbar";
       /* ℹ️ Ensure header styles are preserved when dialog is opened,
         regardless of scroll state
     */
-      html.v-overlay-scroll-blocked &.window-scrolled.layout-navbar-fixed {
+      html.v-overlay-scroll-blocked &.window-scrolled.layout-navbar-fixed,
+      html.dialog-scroll-locked &.layout-navbar-fixed {
 
         #{$header} {
           @extend %default-layout-vertical-nav-scrolled-sticky-elevated-nav;
