--- a/src/@core/scss/_components.scss
+++ b/src/@core/scss/_components.scss
@@ -3,6 +3,30 @@
 @use "@layouts/styles/_placeholders";
 @use "@configured-variables" as variables;
 
+// 👉 Alert
+.v-alert {
+  .v-alert__close {
+    .v-icon {
+      block-size: 20px !important;
+      font-size: 20px !important;
+      inline-size: 20px !important;
+    }
+  }
+
+  &:not(.v-alert--prominent) .v-alert__prepend {
+    .v-icon {
+      block-size: 1.375rem !important;
+      font-size: 1.375rem !important;
+      inline-size: 1.375rem !important;
+    }
+  }
+
+  .v-alert-title {
+    line-height: 1.5rem;
+    margin-block-end: 0.25rem;
+  }
+}
+
 // 👉 Avatar font-size
 .v-avatar {
   @include mixins.avatar-font-sizes($map: variables.$avatar-font-sizes);
@@ -33,6 +57,23 @@
   }
 }
 
+// 👉 Button
+.v-btn {
+  /* stylelint-disable-next-line no-descending-specificity */
+  &:not(.v-btn--icon) .v-icon {
+    --v-icon-size-multiplier: 0.9525 !important;
+  }
+}
+
+// 👉 Chip
+.v-chip.v-chip--size-default .v-avatar {
+  --v-avatar-height: 24px;
+}
+
+.v-chip.v-chip--density-comfortable {
+  line-height: 1;
+}
+
 // Dialog responsive width
 .v-dialog {
   .v-card {
@@ -40,7 +81,7 @@
   }
 }
 
-@media (min-width: 576px) {
+@media (width >= 576px) {
   .v-dialog {
     &.v-dialog-sm,
     &.v-dialog-lg,
@@ -50,7 +91,7 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (width >= 992px) {
   .v-dialog {
     &.v-dialog-lg,
     &.v-dialog-xl {
@@ -59,18 +100,32 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (width >= 1200px) {
   .v-dialog.v-dialog-xl,
   .v-dialog.v-dialog-xl .v-overlay__content > .v-card {
     inline-size: 1165px !important;
   }
 }
 
-// v-tab with pill support
+// 👉 Expansion Panel
+.v-expansion-panel {
+  .v-expansion-panel-text {
+    font-size: 1rem;
+  }
+}
 
+// 👉 Tooltip
+.v-tooltip > .v-overlay__content {
+  font-weight: 500;
+  line-height: 0.875rem;
+}
+
+// 👉 List
+
+//  👉 Tab with pill support
 .v-tabs.v-tabs-pill {
   .v-tab.v-btn {
-    border-radius: 0.375rem !important;
+    border-radius: 6px !important;
     min-inline-size: 8.125rem;
     transition: none;
 
@@ -94,7 +149,7 @@
   }
 }
 
-// 👉 added box shadow
+// 👉 Timeline added box shadow
 .v-timeline-item {
   .v-timeline-divider__dot {
     .v-timeline-divider__inner-dot {
@@ -160,7 +215,6 @@
 }
 
 // 👉 Slider
-
 .v-slider.v-input--horizontal .v-slider-track__fill {
   block-size: var(--v-slider-track-size);
 }
@@ -171,7 +225,19 @@
 
 .v-slider-thumb {
   .v-slider-thumb__label {
+    background: rgb(117, 117, 117);
     color: rgb(var(--v-theme-on-primary));
+
+    &::before {
+      color: rgb(117, 117, 117);
+    }
+  }
+}
+
+// 👉 Switch
+.v-switch {
+  .v-selection-control:not(.v-selection-control--dirty) .v-switch__thumb {
+    color: #fff;
   }
 }
 
@@ -179,5 +245,45 @@
 .v-table--density-default > .v-table__wrapper > table > tbody > tr > td,
 .v-table--density-default > .v-table__wrapper > table > thead > tr > td,
 .v-table--density-default > .v-table__wrapper > table > tfoot > tr > td {
-  block-size: 50px;
+  block-size: 50px !important;
+}
+
+.v-table {
+  --v-table-header-height: 54px !important;
+
+  th {
+    color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity)) !important;
+    font-size: 0.75rem;
+
+    .v-data-table-header__content {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  .v-selection-control {
+    color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity)) !important;
+    font-size: 1rem;
+  }
+}
+
+.v-data-table {
+  th {
+    background: rgb(var(--v-table-header-background)) !important;
+  }
+}
+
+// 👉 Pagination
+.v-pagination {
+  .v-btn {
+    border-radius: 4px;
+    color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity));
+    font-size: 14px;
+    font-weight: 400;
+  }
+}
+
+// 👉 SnackBar
+.v-snackbar--variant-elevated {
+  @include mixins.elevation(6);
 }
