--- a/src/@core/scss/_default-layout-w-vertical-nav.scss
+++ b/src/@core/scss/_default-layout-w-vertical-nav.scss
@@ -1,7 +1,7 @@
 @use "@configured-variables" as variables;
 @use "placeholders" as *;
 @use "vuetify/lib/styles/tools/_elevation" as mixins_elevation;
-@use "../misc";
+@use "misc";
 @use "mixins";
 
 $header: ".layout-navbar";
