--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
 /* 主样式文件 - 合并所有CSS/SCSS引用 */
 
 /* Vuetify和模板核心样式 */
-@use '@core/scss/template/libs/vuetify/index' as vuetify-lib;
-@use '@core/scss/template/index' as template;
+@use '@core/scss/libs/vuetify/index' as vuetify-lib;
+@use '@core/scss/index' as template;
 @use '@layouts/styles/index' as layouts;
 @use 'vuetify/styles' as vuetify;
 @use '@styles/custom' as custom;
