修正 Vuetify 变量路径为相对路径

--- a/src/styles/variables/_vuetify.scss
+++ b/src/styles/variables/_vuetify.scss
@@ -1,5 +1,4 @@
-// ❗ Path must be relative
-@forward "../../@core/scss/libs/vuetify/variables";
+@forward "@core/scss/libs/vuetify/variables";
 
 // 如果需要自定义Vuetify变量，可以在这里添加
 // @forward "../../@core/scss/libs/vuetify/variables" with (
