--- a/src/@core/scss/libs/vuetify/_overrides.scss
+++ b/src/@core/scss/libs/vuetify/_overrides.scss
@@ -228,8 +228,13 @@ h6,
 // 👉 Overlay
 .v-overlay__scrim,
 .v-navigation-drawer__scrim {
-  background: rgba(var(--v-overlay-scrim-background), var(--v-overlay-scrim-opacity)) !important;
-  opacity: 1 !important;
+  background: rgba(var(--v-overlay-scrim-background), var(--v-overlay-scrim-opacity));
+  opacity: 1;
+}
+
+// 透明主题下全屏弹窗的overlay背景透明度调整
+html[data-theme="transparent"] .v-dialog--fullscreen .v-overlay__scrim {
+  background: rgba(var(--v-overlay-scrim-background), 0.3);
 }
 
 // 👉 VMessages
@@ -255,6 +260,11 @@ h6,
 // 👉 Dialog
 .v-dialog--fullscreen {
   background-color: rgb(var(--v-theme-surface));
+}
+
+// 透明主题下全屏弹窗背景透明
+html[data-theme="transparent"] .v-dialog--fullscreen {
+  background-color: transparent !important;
 }
 
 // For dialog card title
