--- a/src/@core/scss/_misc.scss
+++ b/src/@core/scss/_misc.scss
@@ -24,7 +24,7 @@ code {
   position: relative;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 4%), 0 1px 2px rgba(0, 0, 0, 2%);
 
-  @media (width >= 1280px) {
+  @media (width >= 1280px) and (hover: hover) {
     background: rgba(var(--v-theme-background), 1);
 
     .v-theme--transparent & {
@@ -33,8 +33,7 @@ code {
     }
   }
 
-
-  @media (width < 1280px) {
+  @media (width < 1280px), (hover: none) {
     background: transparent;
 
     &::before {
@@ -63,6 +62,6 @@ code {
       .v-theme--transparent & {
         background: rgba(var(--v-theme-background), 0.3);
       }
+    }
   }
-}
 }
