--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@
 @use '@core/scss/index' as template;
 @use '@layouts/styles/index' as layouts;
 @use 'vuetify/styles' as vuetify;
-@use '@styles/custom' as custom;
+@use '@styles/common' as common;
 
 /* 第三方库纯CSS样式 */
 @import 'vue-toastification/dist/index.css';
